Make selecting parts of a line in align:justify work right on Mac/Linux.  Bug 58704, r=akkana, sr=kin